@@ -47,6 +47,7 @@ Release 0.9.8
   $request parameter
 - zm_tests: patch simpletest to get rid of deprecated use of '&' to
   dereference object instances
+- add new, Savant based, view helper methods to handle resources
 
 Release 0.9.7
 - add ZMProductAssociation service and related code
